--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1"
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation platform("com.squareup.okhttp3:okhttp-bom:4.9.3")
+    implementation "com.squareup.okhttp3:okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor"
     implementation 'com.google.code.gson:gson:2.8.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
